syntax = "proto3";

package questapi;

import "google/protobuf/empty.proto";

message Status {
  string message = 1;
}

service QuestService {
  rpc ListQuests(google.protobuf.Empty) returns (QuestList) {}
  rpc CreateQuest(Quest) returns (Status) {}
  rpc DeleteQuest(Quest) returns (Status) {}
}

message Quest {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string additionalInfo = 4;
}

message QuestList {
  repeated Quest quests = 1;
}



